hello-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  creationTimestamp: null
  labels:
    app: hello
  name: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  serviceName: hello
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello
    spec:
      containers:
      - image: bob2606/hello-http:0.8.27
        name: hello-http
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          periodSeconds: 15
          failureThreshold: 2
        volumeMounts:
          - name: data
            mountPath: /var/lib/hello-http
            subPath: hello-http

      volumes:
        - name: data
          emptyDir:
