www-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: www
  name: www
spec:
  replicas: 1
  selector:
    matchLabels:
      app: www
  strategy: {}
  template:
    metadata:
      labels:
        app: www
    spec:
      containers:
      - image: nginx:1.26
        name: nginx
        readinessProbe:
          httpGet:
            path: /index.html
            port: 80
          periodSeconds: 4
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /index.html
            port: 80
          periodSeconds: 10
          failureThreshold: 1
        volumeMounts:
          - name: html
            mountPath: /usr/share/nginx/html

      volumes:
        - name: html
          hostPath:
            path: /data/html
            type: Directory
