wwwphp-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wwwphp
  name: wwwphp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wwwphp
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wwwphp
    spec:
      containers:
      - image: nginx:1.26
        name: nginx
        volumeMounts:
          - name: data
            mountPath: /usr/share/nginx/html
            subPath: html
          - name: data
            mountPath: /etc/nginx/conf.d
            subPath: nginx-config
      - image: php:8.2-fpm
        name: php
        volumeMounts:
          - name: data
            mountPath: /var/www/html
            subPath: html

      volumes:
        - name: data
          hostPath:
            path: /data
            type: Directory
