www-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: www
  name: www
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: www
  type: NodePort
status:
  loadBalancer: {}
