wwwphp-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: wwwphp
  name: wwwphp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wwwphp
  type: LoadBalancer
status:
  loadBalancer: {}
