busy-netpol-restrict.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: busy-restrict
spec:
  podSelector:
    matchLabels:
      run: busy
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
  policyTypes:
    - Ingress
    - Egress
