wwwphp-netpol-allow-ok.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wwwphp-allow-ok
spec:
  podSelector:
    matchLabels:
      app: wwwphp
  ingress:
    - from:
      - podSelector:
          matchLabels:
            np: ok
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: labo
        podSelector:
          matchLabels:
            np: ok
