wwwphp-netpol-deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wwwphp-deny-all
spec:
  podSelector:
    matchLabels:
      app: wwwphp
